--- a/Footer.css
+++ b/Footer.css
@@ -1,8 +1,11 @@
 footer {
+  position: absolute;
   background-color: #7c47d5 ;
   color: white;
   padding: 20px 0;
   text-align: center;
+  bottom: 0px;
+  width: 100%;
 }
 
 
